--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/portfolio2?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://ursjgo2ovkdgpc1t:Um3KnFAinkxHJp09LTom@bdxnxgkz4j05cgksgc61-mysql.services.clever-cloud.com:3306/bdxnxgkz4j05cgksgc61
+spring.datasource.username=ursjgo2ovkdgpc1t
+spring.datasource.password=Um3KnFAinkxHJp09LTom
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
